--- a/app/views/function_user_projects/index.html.erb
+++ b/app/views/function_user_projects/index.html.erb
@@ -1,7 +1,7 @@
 <p></p>
-
+<div id="loader"></div> 
 <div class="container">
-  <div class="ui menu">
+  <div>
   <br />
     <h2>Membros</h2>
     
@@ -12,7 +12,7 @@
   <%= render 'function_user_projects/breadcrumb' %>
 <br />
 
-
+<div style="display:none;" id="myDiv" class="animate-bottom">
  <% if @function_user_projects.empty? %>
     <div class="box_center">
       <%= image_tag("teamwork.png") %>
