--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Kronos - Agile Projects</title>
+    <%= stylesheet_link_tag 'loader', media: 'all', 'data-turbolinks-track' => true %>
     <%= stylesheet_link_tag 'layout', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'responsive-nav', 'data-turbolinks-track' => true  %>
@@ -16,44 +17,38 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>   
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
-    
-   </head>
-<body>
 
-<% if !user_signed_in? %>
-  <%= render 'layouts/default_top_menu_bar' %>
-  <%= yield %>
-  <%= render 'layouts/footer' %>
-<% else %>
-  <%= render 'layouts/user_top_menu_bar' %>
-  <%= render 'layouts/admin_side_bar' if current_user.group == 'admin' %>
-  <%= render 'layouts/user_side_bar' if current_user.group != 'admin' %>
-  
-  <!-- content -->
-  <div class="pusher main-pusher">
-    <%= render 'layouts/alert_messages' %>
-    <%= yield %>
-  </div>
-<% end %>
+</head>
+
+<body onload="myFunction()" style="margin:0;">
+
+    <% if !user_signed_in? %>
+      <%= render 'layouts/default_top_menu_bar' %>
+      <%= yield %>
+      <%= render 'layouts/footer' %>
+    <% else %>
+      <%= render 'layouts/user_top_menu_bar' %>
+      <%= render 'layouts/admin_side_bar' if current_user.group == 'admin' %>
+      <%= render 'layouts/user_side_bar' if current_user.group != 'admin' %>
+
+      <!-- content -->
+      <%= render 'layouts/alert_messages' %>
+        <%= yield %>
+    <% end %>
 
 </body>
 </html>
-    
-
-
+ 
 <script>
-var acc = document.getElementsByClassName("accordion");
-var i;
+var myVar;
 
-for (i = 0; i < acc.length; i++) {
-  acc[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var panel = this.nextElementSibling;
-    if (panel.style.display === "block") {
-      panel.style.display = "none";
-    } else {
-      panel.style.display = "block";
-    }
-  });
+function myFunction() {
+  myVar = setTimeout(showPage, 800);
+}
+
+function showPage() {
+  document.getElementById("loader").style.display = "none";
+  document.getElementById("myDiv").style.display = "block";
 }
 </script>
+
