--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -1,13 +1,14 @@
 <p></p>
 
+<div id="loader"></div> 
 <div class="container">
-  <div class="ui menu">
+  <div>
   <br />
     <h2>Releases</h2>
   </div>
 
   <%= render 'releases/breadcrumb' %>
-
+<div style="display:none;" id="myDiv" class="animate-bottom">
   <% if @releases.empty? %>
       <div class="box_center">
       <%= image_tag("product.png") %>
