--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -38,7 +38,7 @@
                 <br />
                 <%= f.label :user_story_id  %>
                 <br />
-                <%= f.collection_select(:user_story_id, current_project.user_stories, :id, :title, {:prompt=>false}) %>
+                <%= f.collection_select(:user_story_id, current_project.user_stories, :id, :title,  { prompt: 'Selecionar user story' } ) %>
               
               </div>
         
