--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -1,7 +1,7 @@
 <p></p>
 
 <div class="container">
-  <div class="ui menu">
+  <div>
     <h2>Tema</h2>
     <%= link_to 'Novo', new_theme_path, class: 'item' %>
     <%= link_to 'Editar', edit_theme_path(@theme), class: 'item' %>
