--- a/app/views/user_stories/_form.html.erb
+++ b/app/views/user_stories/_form.html.erb
@@ -1,5 +1,8 @@
 
-<%= form_for(@user_story, html: {class: 'form'}) do |f| %>
+
+
+
+<%= form_for(@user_story, html: {class: 'form'},  onsubmit: 'myFunction()') do |f| %>
 
   <% if @user_story.errors.any? %>
         <div class="alert_danger">
@@ -14,7 +17,7 @@
   <% end%>
 <br />
 
-<div class="inline field">
+<div>
       <b>Tema</b>
       <br />
       <div>
@@ -66,12 +69,14 @@
     </div>
    
     <br />
+    
         <%= link_to 'Salvar', new_user_story_path({ controller: 'user_stories', action: 'create' }), class: 'save blue_button' %>
-        <%= link_to 'Cancelar', user_stories_path, class: 'save red_button' %>
+        <%= link_to 'Cancelar', "#", class: 'red_button' %>
+   
     <br />
     <br />
   <% end %>
-
+</div>
 <p></p>
 <p></p>
 <p></p>
