--- a/app/views/user_stories/index.html.erb
+++ b/app/views/user_stories/index.html.erb
@@ -1,65 +1,10 @@
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
 
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
+<div id="loader"></div>
 
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  border: 1px solid #888;
-  width: 50%;
-  margin-top:-90px;
-  padding:10px
-}
-
-.modal-content form{
-  margin-left: -120px
-}
-
-.modal-content h2{
-  text-align: center;
-}
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-</style>
+<div style="display:none;" id="myDiv" class="animate-bottom">
 
 <div class="container">
- <div class="info_accordion">
-        <!--
-        <%#= form_tag(user_stories_path, method: :get, class: "ui form") do %>
-           <div class="inline field">
-              <%#= text_field_tag :search, params[:search], placeholder: "Buscar User stories" %>
-              <%#= image_submit_tag("search.png") %>
-           </div>    
-        <%# end %>
-        -->
-      </div>
+ 
       <br />
       <h2>User Stories</h2>
 
@@ -68,42 +13,36 @@ body {font-family: Arial, Helvetica, sans-serif;}
   <br />
   <br />
 
+
 <% if @user_stories.empty? %> 
   <div class="box_center">
       <%= image_tag("backlog_big.png") %>
       <br />
       <br />
       <p class="access_deny">Nenhuma user story criada. Clique em "Novo" para iniciar o backlog.</p>
-      <%= link_to "Novo", new_user_story_path, class: 'item green_button' %>
+      <%= link_to "Novo", new_user_story_path, class: 'green_button' %>
     </div>
   </div>
 <% else %>
 
-<%= link_to "Novo", new_user_story_path, class: 'item green_button' %>
+<%= link_to "Nova User Story", new_user_story_path, class: 'green_button' %>
 <br />
 <br />
 
+
 <% @user_stories.each do |user_story| %>
-<button class="us_accordion">
-       <%= link_to user_story do %>
+<button class="accordion">
+     
         <div class="silver_button">
           US-<%= user_story.project.initial %>-<%= user_story.id %> 
         </div> 
-           <%= user_story.title %>
-      <% end %>
+           <b class="accordion_title"> 
+                <%= user_story.title %>
+           </b>
+    
+       <div class="info_accordion">
       
-      <% if user_story.sprint.nil? %>
-      
-      <% else %>
-      <div class="info_accordion">
-        <div class="mini_info_button">
-          <b>Sprint: </b>
-         <%= link_to "#{user_story.sprint.name}", scrumboard_path(user_story.project.id), title: 'Acessar board da sprint' %> 
-      </div>
-
-     <% end %>
-    </div>
-      <div class="info_accordion">
+     
       <% if user_story.priority_id == 1 %>
           <div class="mini_red_button">
                <b>Prioridade: </b>
@@ -142,6 +81,19 @@ body {font-family: Arial, Helvetica, sans-serif;}
           Concluída
          <% end %>
        </div>
+
+
+       <% if user_story.sprint.nil? %>
+      
+      <% else %>
+     
+     <div class="mini_status_button">
+               <b>Sprint: </b>
+                <%= user_story.sprint.name %>
+          </div>
+    
+      
+     <% end %>
       </div>
 </button>
       <div class="panel">
@@ -151,12 +103,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
             <p></p>
             <b>Lista de Sub-task associadas</b>
           
-            <a class="blue_button" userstory="<%= user_story.id %>" title="Adicionar tarefa" id="myBtn">+ Adicionar</a>
+            <%= link_to '+ Adicionar', new_task_path(@task),  target: "_blank", class: 'blue_button' %>
             <br />  
 
               <% user_story.tasks.each do |s| %>
              
-              <p>           
+              <p class="task_content_accordion">           
                   <div class="kind_task_accordion">
                          <% if s.kind_id == 1 %>
                            <%= image_tag('bug.png', title: "Task do tipo BUG") %>
@@ -229,123 +181,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
               
             <br />
             <br />    
-      </div>   
-        
+          
+   </div> 
+     
 <% end %>
-
-<div id="myModal" class="modal">
-  <div class="modal-content">
-    <div class="container">
-         <span class="close">&times;</span>
-        <%= form_for(@task, html: {class: 'form'}) do |f| %>
-
-       <% if @task.errors.any? %>
-        <div class="alert_danger">
-           <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-              <div class="header">
-            <% @task.errors.full_messages.each do |message| %>
-                <p> - <%= message %> </p>
-            <% end %>
-          </div>
-          </div>
-       <% end%>
-
-        <br />
-              <div>
-                <label><strong>Título: </strong></label>
-                <br />
-                <%= f.text_field :title %>
-              </div>
-
-              <div>
-                <label><strong>Descrição: </strong></label>
-                <br />
-                <%= f.text_area :description  %>
-              </div>
-
-               <div>               
-                <br />
-                <label><strong>User Story</strong></label>
-                <br />
-                <%= f.collection_select(:user_story_id, current_project.user_stories, :id, :title, {:prompt=>false}) %>
-              
-              </div>
-              
-              <div>
-                <label><strong>Tipo da task </strong></label>
-                <br />
-                <%= f.select :kind_id, Kind.all.collect {|x| [x.name, x.id]}, { prompt: 'Selecionar o tipo de tarefa' } %>
-              </div>
-
-                <div>
-                <%= f.label :status %>
-                <br />
-
-                  <%= f.select :status, options_for_select({'Pendente' => 1 , 'Desenvolvimento' => 2 , 'Code Review' => 3, 'QA' => 4 , 'Concluída' => 5 }), {:prompt => false}, {  placeholder: 'Status' } %>
-              </div>
-
-              <div>
-                <label><strong>Prioridade</strong></label>
-                <br />
-                <%= f.select :priority_id, Priority.all.collect {|x| [x.name, x.id]}, { prompt: 'Selecionar a prioridade de tarefa' } %>
-              </div>
-              
-              <div>
-                <%= f.hidden_field :user_story_id %>
-                <%= f.hidden_field :status, value: '1' %>
-              </div>
-
-              <div>
-                <%= f.submit 'Adicionar', class: 'blue_button' %>
-              </div>
-            <% end %>
-    </div>
-  </div>
-
-</div>
-
-<script>
-// Get the modal
-var modal = document.getElementById("myModal");
-
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal 
-btn.onclick = function() {
-  modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-  modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-
- $('.ui.search.dropdown').dropdown({ allowLabels:true});
-
- $('.button.new_criterion').click(function(){
-    $('#user_story_acceptance_criterion_user_story_id').val($(this).attr('userstory'));
-    $('.ui.modal.criterion').modal('show');
-    return false;
- });
-
- $('.button.new_task').click(function(){
-    $('#task_user_story_id').val($(this).attr('userstory'));
-    $('.ui.modal.task').modal('show');
-    return false;
- });
-  
-</script>
 
 
   <% end %> 
@@ -356,23 +195,17 @@ window.onclick = function(event) {
   <br />
   <br />
   <br />
-
+ </div>
+</div>
 </div>
 
-
-
-<!-- /MODAL TAREFA -->
 <script type="text/javascript">
   $(document).ready(function() {
     //$('.sortable').tablesort();
   });
-
-
-
- 
   ///Accordion
 
-  var acc = document.getElementsByClassName("us_accordion");
+  var acc = document.getElementsByClassName("accordion");
   var i;
 
   for (i = 0; i < acc.length; i++) {
@@ -387,6 +220,32 @@ window.onclick = function(event) {
     });
   }
 
-
-  
 </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
