ajustes no layout de reset de senha, lista de sprint

--- a/app/views/function_user_projects/show.html.erb
+++ b/app/views/function_user_projects/show.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="ui menu">
     <h2>Membro</h2>
-    <%= link_to 'Editar', edit_function_user_project_path(@function_user_project), class: 'item blue_button' %>
+    <%= link_to 'Editar', edit_function_user_project_path(@function_user_project), class: 'blue_button' %>
     <%= link_to 'Voltar', function_user_projects_path, class: 'item red_button' %>
   </div>
 
