--- a/app/views/sprints/index.html.erb
+++ b/app/views/sprints/index.html.erb
@@ -1,6 +1,4 @@
 <p></p>
-<div id="loader"></div> 
-
 
 <div class="container">
   <div>
@@ -10,21 +8,30 @@
 
   <%= render 'sprints/breadcrumb' %>
   </div> 
-  <div style="display:none;" id="myDiv" class="animate-bottom">
+<div>
    <% if @sprints.empty? %> 
         <div class="box_center">
             <%= image_tag("access-denied.png") %>
             <br />
             <br />
-            <p class="access_deny">Nenhuma sprint ativa no momento. Clique em "Nova" para criar.</p>
-            <%= link_to "Nova", new_sprint_path, class: 'item green_button' %>
+            <p class="access_deny">Nenhuma sprint ativa no momento. Clique em "Nova Sprint" para criar.</p>
+            <%= link_to "Nova sprint", new_sprint_path, class: 'green_button' %>
         </div>
    <% else %> 
 
 <br />
-
+<% if Sprint.find_by_sql("SELECT * from sprints where sprint_status == 'ATIVA' AND project_id = #{ current_project_id } ").count == 0 %>
+ <%= link_to "Nova sprint", new_sprint_path, class: 'green_button' %>
+  <br />
+  <br />
+<% else %>
+  <button type="button" class="silver_button" title="Já existe uma sprint ativa" disabled>Nova Sprint</button>
+   <br />
+   <br />
+<% end %>
 
 <% @sprints.each do |sprint| %>
+
 <button class="accordion">
     <b class="accordion_title">
      <%= sprint.name %>
@@ -34,64 +41,78 @@
       <div class="info_sprint_user_story">
        User Stories :  <%= UserStory.where(project: current_project).count %>
       </div>
+      
       <div class="info_sprint_bug">
       Bugs:
        <%= Task.joins("INNER JOIN user_stories ON user_stories.id = 
                                                                 tasks.user_story_id
                                                                 WHERE kind_id = 1 AND project_id = '#{ current_project_id }'").count %>
-       </div>  
+      </div>  
 
-           <div class="info_sub_task">
-      Sub-task:
-       <%= Task.joins("INNER JOIN user_stories ON user_stories.id = 
+      <div class="info_sub_task">
+         Sub-task:
+         <%= Task.joins("INNER JOIN user_stories ON user_stories.id = 
                                                                 tasks.user_story_id
                                                                 WHERE kind_id = 2 AND project_id = '#{ current_project_id }'").count %>
        </div>
+
        <div class="info_sprint_status">
-          ATIVA
-       </div>                                                       
+          <%= sprint.sprint_status %>
+       </div> 
+
     </div>
 </button>
-    <div class="panel">
-      <br />
- <div>
-   <b>Duração: </b>
-   <%= l sprint.start_date %> à <%= l sprint.end_date %>
- </div> 
+<div class="panel">
+            <br />
+       <div>
+         <b>Duração: </b>
+         <%= l sprint.start_date %> à <%= l sprint.end_date %>
+       </div> 
 
- <div>
-    <b>Planejamento: </b>
-    <%= l sprint.planning_start_date %> à <%= l sprint.planning_end_date %> 
- </div> 
+       <div>
+          <b>Planejamento: </b>
+          <%= l sprint.planning_start_date %> à <%= l sprint.planning_end_date %> 
+       </div> 
 
-<div>
-    <b>Execução: </b>
-    <%= l sprint.execution_start_date %> à <%= l sprint.execution_end_date %>  
- </div> 
+      <div>
+          <b>Execução: </b>
+          <%= l sprint.execution_start_date %> à <%= l sprint.execution_end_date %>  
+       </div> 
 
- <div>
-    <b>Review meeting: </b>
-    <%= l sprint.review_meeting_date %>
+       <div> <b>Review meeting: </b>
+          <%= l sprint.review_meeting_date %>
+       </div>
+
+        <div>
+          <b>Retrospective meeting: </b>
+          <%= l sprint.retrospective_meeting_date %>
+       </div> 
+
+       <div>
+          <b>Release: </b>
+          <%= sprint.release.version unless sprint.release.nil?  %>
+       </div> 
+
+          <br />
+           <%= link_to 'Editar', edit_sprint_path(sprint), class: 'blue_button' %> 
+           <%= link_to 'Remover', sprint, method: :delete, data: { confirm: 'Você tem certeza que deseja remover a sprint?' }, class: 'red_button' %>
+           <%= link_to 'Acessar board', scrumboard_path(current_project.id), class: 'black_button' %>
+           <%= link_to 'Concluir a Sprint', change_sprint_path(sprint, { controller: 'sprints', action: 'change_status' } ), method: :post,  data: { confirm: 'Você tem certeza que deseja finalizar a sprint? ' }, class: 'orange_button' %>
+          
+            <br /> 
+            <br />    
+   
  </div>
-
-  <div>
-    <b>Retrospective meeting: </b>
-    <%= l sprint.retrospective_meeting_date %>
- </div> 
-
- <div>
-    <b>Release: </b>
-    <%= sprint.release.version unless sprint.release.nil?  %>
- </div> 
+   <% end %>
+    <br />
+    <br />
+      <%= paginate @sprints %>  
    
     <br />
-     <%= link_to 'Editar', edit_sprint_path(sprint), class: 'blue_button' %> 
-     <%= link_to 'Remover', sprint, method: :delete, data: { confirm: 'Você tem certeza que deseja remover a sprint?' }, class: 'red_button' %>
-          <br /> <br />
+    <br />
       <% end %>
- </div>
- <% end %>
 
+     
 
 <script type="text/javascript">
   $(document).ready(function() {
@@ -115,38 +136,6 @@
   }
 
 </script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </div> 
