--- a/app/views/user_stories/index.html.erb
+++ b/app/views/user_stories/index.html.erb
@@ -26,13 +26,13 @@
 <% else %>
 
 <%= link_to "Nova User Story", new_user_story_path, class: 'green_button' %>
+ <%= link_to 'Acessar board', scrumboard_path(current_project.id), class: 'black_button', target: 'blank' %>
 <br />
 <br />
 
 
 <% @user_stories.each do |user_story| %>
 <button class="accordion">
-     
         <div class="silver_button">
           US-<%= user_story.project.initial %>-<%= user_story.id %> 
         </div> 
@@ -41,8 +41,7 @@
            </b>
     
        <div class="info_accordion">
-      
-     
+    
       <% if user_story.priority_id == 1 %>
           <div class="mini_red_button">
                <b>Prioridade: </b>
@@ -84,13 +83,13 @@
 
 
        <% if user_story.sprint.nil? %>
-      
+        
       <% else %>
      
      <div class="mini_status_button">
-               <b>Sprint: </b>
-                <%= user_story.sprint.name %>
-          </div>
+           <b>Sprint: </b>
+           <%= user_story.sprint.name %>
+     </div>
     
       
      <% end %>
@@ -171,7 +170,7 @@
             
           <br />
           <br /> 
-              <%= link_to edit_user_story_path(user_story), class: 'yellow_button' do %>
+              <%= link_to edit_user_story_path(user_story), class: 'blue_button' do %>
                 Editar
               <% end %>
            
