--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -216,7 +216,7 @@ div#notification_inactived {
     margin-right: 30px;
     width: 250px;
     padding-right: 20px;
-    background-color: #fcfcfc;
+    background-color: #ffffff;
     box-shadow: 5px 0 4px -4px rgb(204, 204, 204);
 }
 
@@ -283,6 +283,18 @@ div#notification_inactived {
 
 .yellow_button{
     background-color: #ffbd08;
+    border: none;
+    color: white;
+    margin-top: 10px;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.black_button{
+    background-color: #111111e3;
     border: none;
     color: white;
     margin-top: 10px;
