--- a/app/views/function_user_projects/index.html.erb
+++ b/app/views/function_user_projects/index.html.erb
@@ -46,7 +46,7 @@
                     <td>
       
            
-              <%= link_to 'Editar', edit_function_user_project_path(function_user_project), class: 'yellow_button' %>
+              <%= link_to 'Editar', edit_function_user_project_path(function_user_project), class: 'blue_button' %>
           
             <%= link_to 'Remover', function_user_project, method: :delete, data: { confirm: 'Você tem certeza?' }, class: 'red_button' %>
           
