--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,8 @@
       <%= render 'layouts/user_side_bar' if current_user.group != 'admin' %>
 
       <!-- content -->
+    
+
       <%= render 'layouts/alert_messages' %>
         <%= yield %>
     <% end %>
@@ -43,7 +45,7 @@
 var myVar;
 
 function myFunction() {
-  myVar = setTimeout(showPage, 800);
+  myVar = setTimeout(showPage);
 }
 
 function showPage() {
