--- a/app/views/projects/scrumboard.html.erb
+++ b/app/views/projects/scrumboard.html.erb
@@ -1,4 +1,4 @@
-<div id="loader"></div>
+
 
 <div class="container">  
 <br />
@@ -6,7 +6,6 @@
 <hr>
  <br />
  <br />
- <div style="display:none;" id="myDiv" class="animate-bottom">
 <% if @project.sprints.empty? && current_user.group == 'analista' %> 
         <div class="box_center">
             <%= image_tag("access-denied.png") %>
@@ -28,17 +27,18 @@
 
 <% else %>
 
-
+<% @sprint = Sprint.find_by_sql("SELECT * from sprints where sprint_status == 'ATIVA' AND project_id = #{ current_project_id } ") %>
 <div class=" top attached tabular menu">
-  <% @project.sprints.each_with_index do |sprint, i| %>
-    <a class="item <%= 'active' if i == 0 %>" data-tab="tab-<%= sprint.id %>">Sprint: <%= sprint.name %></a>
+
+  <% @sprint.each_with_index do |sprint, i| %>
+    <a class="item <%= 'active' if i == 0 %>" data-tab="tab-<%= sprint.id %>"><b>Sprint:</b> <%= sprint.name %></a>
     &nbsp
     <%= link_to "Nova User Story", new_user_story_path, class: "red_button" %> 
     <%= link_to "Nova task", new_task_path, class: "blue_button" %>
   <% end %>
 </div>
 
-<% @project.sprints.each_with_index do |sprint, i| %>
+<% @sprint.each_with_index do |sprint, i| %>
 <div class=" bottom attached tab segment <%= 'active' if i == 0 %>" data-tab="tab-<%= sprint.id %>">
 
   <table class=" very celled table">
@@ -243,7 +243,7 @@
         <% if u.avatar.attached? %>
             <%= image_tag(u.avatar_thumbnail, :class=> "image_profile_card") %>
            <% else %>
-            <%= image_tag("profile-user.png", :class=> "image_profile_card") %>
+            <%= image_tag("profile-no-image.png", :class=> "image_profile_card") %>
         <% end %>
 
           <% end %>
@@ -324,7 +324,7 @@
                     <% if u.avatar.attached? %>
                           <%= image_tag(u.avatar_thumbnail, :class=> "image_profile_card") %>
                     <% else %>
-                        <%= image_tag("profile-user.png", :class=> "image_profile") %>
+                        <%= image_tag("profile-no-image.png", :class=> "image_profile") %>
                     <% end %>
                   <% end %>
                 </div>
@@ -395,7 +395,7 @@
                    <% if u.avatar.attached? %>
                           <%= image_tag(u.avatar_thumbnail, :class=> "image_profile_card") %>
                     <% else %>
-                        <%= image_tag("profile-user.png", :class=> "image_profile_card") %>
+                        <%= image_tag("profile-no-image.png", :class=> "image_profile_card") %>
                     <% end %>
                   <% end %>
                 </div>
@@ -460,7 +460,7 @@
                     <% if u.avatar.attached? %>
                           <%= image_tag(u.avatar_thumbnail, :class=> "image_profile_card") %>
                     <% else %>
-                        <%= image_tag("profile-user.png", :class=> "image_profile_card") %>
+                        <%= image_tag("profile-no-image.png", :class=> "image_profile_card") %>
                     <% end %>
                   <% end %>
                 </div>
