--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,5 +1,5 @@
   
- <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'ui form', method: :put }) do |f| %>
+ <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form', method: :put }) do |f| %>
         
         <div class="container"> 
          <% if resource.errors.any? %>
@@ -20,14 +20,12 @@
          <br />
           <h1>Editar perfil</h1>
           <br />
-           <% if current_user %>
             <% if current_user.avatar.attached? %>
-            <%= image_tag(current_user.avatar_thumbnail, :class=> "image_profile") %>
+           <%= image_tag(current_user.avatar_thumbnail, :class=> "image_profile") %>
            <% else %>
-            <%= image_tag("profile-no-image.png", :class=> "image_profile") %>
+            <% image_tag("profile-no-image.png", :class=> "image_profile") %>
            <% end %>
-           <% end %>
-
+           
       
             <%= f.file_field :avatar %>
 
